--- a/src/main/resources/assets/isles-plus/lang/en_us.json
+++ b/src/main/resources/assets/isles-plus/lang/en_us.json
@@ -1,8 +1,10 @@
 {
   "text.autoconfig.assets.title": "Isles Plus Config",
   "text.autoconfig.assets.option.debugloot": "Notifications for every loot drop (debugging)",
-  "text.autoconfig.assets.option.keydropnotifs": "Key drop notifications",
-  "text.autoconfig.assets.option.nightnotiftime": "Night notification time (in-game)",
   "text.autoconfig.assets.option.nightnotifs": "Night notification toggle",
-  "text.autoconfig.assets.option.customlootnotifs": "Custom loot notifications"
+  "text.autoconfig.assets.option.nightnotiftime": "Night notification time (in-game)",
+  "text.autoconfig.assets.option.customlootnotifs": "Custom loot notifications",
+  "text.autoconfig.assets.option.stackchat": "Stack duplicate chat messages",
+  "text.autoconfig.assets.option.fishingnotifier": "Play sound when you stop fishing",
+  "text.autoconfig.assets.option.glowingparkourskulls": "Glowing skulls at giant's course"
 }
